@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.9.11
+VERSION=1.9.12
 
-DEPENDENCY="zeda=1.5.16;zm=1.3.5"
+DEPENDENCY="zeda=1.6.0;zm=1.3.9"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
