@@ -864,7 +864,7 @@ zMat3D *zMat3DFScan(FILE *fp, zMat3D *m)
 
   for( i=0; i<3; i++ )
     for( j=0; j<3; j++ )
-      m->e[j][i] = zFDouble( fp );
+      zFDouble( fp, &m->e[j][i] );
   return m;
 }
 
